fixed metadata getter and setter function in StoreADUs of bundle core convert file directory to path.resolve in client and server