@@ -44,42 +44,48 @@ public class StoreADUs {
         return sb.toString();
     }
 
-    public Metadata getMetadata(File folder) throws IOException {
+    private Metadata getMetadata(String clientId, String appId) throws IOException {
+        Path metadataPath = getAppFolder(clientId, appId).resolve("metadata.json");
         try {
-            String data = Files.readString(rootFolder.toPath().resolve(folder.toPath().resolve("metadata.json")));
+            String data = new String( Files.readAllBytes(metadataPath));
+            logger.log(INFO, "metadata path " + metadataPath);
             Gson gson = new Gson();
             return gson.fromJson(data, Metadata.class);
         } catch (Exception e) {
-            logger.log(SEVERE, "[FileStoreHelper] metadata not found at " + folder + ". create a new one.");
-            Metadata metadata = new Metadata(1, 0, 0, 0);
-            setMetadata(folder, metadata);
+            logger.log(SEVERE, "[FileStoreHelper] metadata not found at " + metadataPath + ". create a new one.");
+            Metadata metadata = new Metadata(0, 0, 0, 0);
+            setMetadata(clientId, appId, metadata);
             return metadata;
         }
     }
 
-    public void setMetadata(File folder, Metadata metadata) throws IOException {
+    private void setMetadata(String clientId, String appId, Metadata metadata) throws IOException {
         Gson gson = new Gson();
         String metadataString = gson.toJson(metadata);
-        File file = new File(rootFolder, folder + "/metadata.json");
+        Path folder = getAppFolder(clientId, appId);
+        File file = folder.resolve("metadata.json").toFile();
+
+        logger.log(INFO, "[Set] metadata path " + file);
+
         file.getParentFile().mkdirs();
         FileOutputStream oFile = new FileOutputStream(file);
         oFile.write(metadataString.getBytes());
         oFile.close();
     }
 
-    public Metadata getIfNotCreateMetadata(File folder) throws IOException {
+    private Metadata getIfNotCreateMetadata(String clientId, String appId) throws IOException {
         try {
-            return getMetadata(folder);
+            return getMetadata(clientId, appId);
         } catch (FileNotFoundException e) {
-            setMetadata(folder, new Metadata(0, 0, 0, 0));
-            return getMetadata(folder);
+            setMetadata(clientId, appId, new Metadata(0, 0, 0, 0));
+            return getMetadata(clientId, appId);
         }
     }
 
     public List<ADU> getAppData(String appId, String clientId) throws IOException {
         List<ADU> appDataList = new ArrayList<>();
         var folder = new File(clientId, appId);
-        Metadata metadata = getMetadata(folder);
+        Metadata metadata = getMetadata(clientId, appId);
         for (long i = metadata.lastProcessedMessageId + 1; i <= metadata.lastReceivedMessageId; i++) {
             appDataList.add(new ADU(new File(rootFolder + "/" + folder + "/" + i + ".txt"), appId, i, 0, clientId));
         }
@@ -88,7 +94,7 @@ public class StoreADUs {
 
     public List<byte[]> getAllAppData(String appId) throws IOException {
         List<byte[]> dataList = new ArrayList<>();
-        Metadata metadata = getIfNotCreateMetadata(new File(appId));
+        Metadata metadata = getIfNotCreateMetadata(null, appId);
         var folder = new File(rootFolder, appId);
         for (long i = 1; i <= metadata.lastReceivedMessageId; i++) {
             byte[] data = Files.readAllBytes(new File(folder, i + ".txt").toPath());
@@ -107,7 +113,7 @@ public class StoreADUs {
     public void deleteAllFilesUpTo(String clientId, String appId, long aduId) throws IOException {
         //check if there are enough files
         var folder = clientId == null ? Paths.get(appId) : Paths.get(clientId, appId);
-        Metadata metadata = getIfNotCreateMetadata(folder.toFile());
+        Metadata metadata = getIfNotCreateMetadata(clientId, appId);
         if (metadata.lastSentMessageId >= aduId) {
             logger.log(INFO, "[FileStoreHelper.deleteAllFilesUpTo] Data already deleted.");
             return;
@@ -147,19 +153,19 @@ public class StoreADUs {
     public File addADU(String clientId, String appId, byte[] data, long aduId) throws IOException {
         var appFolder = getAppFolder(clientId, appId);
         var folder = appFolder.toFile();
-        Metadata metadata = getIfNotCreateMetadata(folder);
-        var lastAduId = forSending ? metadata.lastSentMessageId : metadata.lastReceivedMessageId;
-        if (aduId != -1) {
+        Metadata metadata = getIfNotCreateMetadata(clientId, appId);
+        var lastAduId = forSending ? metadata.lastAddedMessageId : metadata.lastReceivedMessageId;
+        if (aduId == -1L) {
             aduId = ++lastAduId;
         } else if (aduId <= lastAduId) {
             return null;
         }
         if (forSending) {
-            metadata.lastSentMessageId = aduId;
+            metadata.lastAddedMessageId = aduId;
         } else {
             metadata.lastReceivedMessageId = aduId;
         }
-        setMetadata(folder, metadata);
+        setMetadata(clientId, appId, metadata);
         var file = new File(folder, aduId + ".txt");
         FileOutputStream oFile = new FileOutputStream(file);
         oFile.write(data);
@@ -168,7 +174,7 @@ public class StoreADUs {
     }
 
     public long getLastADUIdReceived(String clientId, String appId) throws IOException {
-        Metadata metadata = getMetadata(clientId == null ? new File(appId) : new File(clientId, appId));
+        Metadata metadata = getMetadata(clientId, appId);
         return metadata.lastReceivedMessageId;
     }
 }
